--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,15 @@
-certifi==2025.1.31
-charset-normalizer==3.4.1
-colorama==0.4.6
-filelock==3.18.0
-fsspec==2025.3.0
-huggingface-hub==0.29.3
-idna==3.10
+# Núcleo científico y ML
 numpy==1.26.3
-packaging==23.2
 pandas==2.1.4
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-pytz==2025.2
-PyYAML==6.0.2
-requests==2.32.3
-six==1.17.0
-tqdm==4.67.1
-typing_extensions==4.12.2
-tzdata==2025.2
-urllib3==2.3.0
+scikit-learn==1.3.2
+scipy>=1.6.0
+joblib>=1.2.0
+xgboost==2.0.3
+imbalanced-learn==0.12.0
+
+# Visualización y dashboards
+plotly==5.18.0
+altair==5.2.0
 streamlit==1.32.0
 streamlit-elements==0.1.0
 streamlit-custom-notification-box==0.1.1
@@ -26,16 +18,37 @@ streamlit-option-menu==0.3.12
 streamlit-extras==0.4.0
 streamlit-pandas-profiling==0.1.3
 streamlit-chat==0.1.1
-openai==1.12.0
-scikit-learn==1.3.2
-scipy>=1.6.0
-joblib>=1.2.0
-threadpoolctl>=3.1.0
-xgboost==2.0.3
-plotly==5.18.0
-altair==5.2.0
+
+# Perfilado y análisis
 ydata-profiling==4.6.4
-imbalanced-learn==0.12.0
+
+# OpenAI y DeepSeek
+openai==1.12.0
+python-dotenv==1.0.0
+
+# Utilidades
+tqdm==4.67.1
+requests==2.32.3
+filelock==3.18.0
+typing_extensions==4.12.2
+packaging==23.2
+PyYAML==6.0.2
+threadpoolctl>=3.1.0
+colorama==0.4.6
+
+# Compatibilidad y fechas
+pytz==2025.2
+tzdata==2025.2
+python-dateutil==2.9.0.post0
+idna==3.10
+urllib3==2.3.0
+charset-normalizer==3.4.1
+certifi==2025.1.31
+
+# Otros
+huggingface-hub==0.29.3
+fsspec==2025.3.0
 htbuilder==0.6.2
 hydralit==1.0.14
 hydralit-components==0.0.7
+six==1.17.0
