--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # Núcleo científico y ML
-numpy==1.25.0
-
+numpy>=1.26.0,<2
 pandas==2.1.4
 scikit-learn==1.3.2
 scipy>=1.6.0
@@ -22,7 +21,6 @@ streamlit-chat==0.1.1
 
 # Perfilado y análisis
 ydata-profiling>=4.7.0
-
 
 # OpenAI y DeepSeek
 openai==1.12.0
