--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,27 @@
-# Núcleo científico y ML
-numpy>=1.26.0,<2
-pandas==2.1.4
-scikit-learn==1.3.2
-scipy>=1.6.0
-joblib>=1.2.0
-xgboost==2.0.3
-imbalanced-learn==0.12.0
-
-# Visualización y dashboards
-plotly==5.18.0
-altair==5.2.0
+# Streamlit base y extensiones CRÍTICAS (compatibles con 3.12)
 streamlit==1.32.0
 streamlit-elements==0.1.0
-streamlit-custom-notification-box==0.1.1
-streamlit-card==0.0.5
 streamlit-option-menu==0.3.12
-streamlit-extras==0.4.0
-streamlit-pandas-profiling==0.1.3
-streamlit-chat==0.1.1
+streamlit-card==0.0.5
 
-# Perfilado y análisis
-ydata-profiling>=4.7.0
+# Hydralit (versión modificada para Python 3.12)
+hydralit-components==1.0.9  # Versión más reciente compatible
 
-# OpenAI y DeepSeek
+# Núcleo científico
+numpy==1.26.4
+pandas==2.1.4
+scikit-learn==1.3.2
+scipy==1.13.0
+
+# Visualización
+plotly==5.18.0
+altair==5.2.0
+
+# OpenAI/DeepSeek
 openai==1.12.0
 python-dotenv==1.0.0
-
-# Utilidades
-tqdm==4.67.1
 requests==2.32.3
-filelock==3.18.0
-typing_extensions==4.12.2
-packaging==23.2
-PyYAML==6.0.2
-threadpoolctl>=3.1.0
-colorama==0.4.6
 
-# Compatibilidad y fechas
-pytz==2025.2
-tzdata==2025.2
-python-dateutil==2.9.0.post0
-idna==3.10
-urllib3==2.3.0
-charset-normalizer==3.4.1
-certifi==2025.1.31
-
-# Otros
-huggingface-hub==0.29.3
-fsspec==2025.3.0
+# Utilidades esenciales
 htbuilder==0.6.2
-hydralit==1.0.14
-hydralit-components==0.0.7
-six==1.17.0
+typing_extensions==4.12.2
