--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ altair==5.2.0
 openai==1.12.0
 python-dotenv==1.0.0
 requests==2.32.3
+ openai==1.12.0
 
 # Utilidades esenciales
 htbuilder==0.6.2
